Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pp/DebugInfo.pp

{*
 * Create debugging information entry for a member.
 * \param Builder      The DIBuilder.
 * \param Scope        Member scope.
 * \param Name         Member name.
 * \param NameLen      Length of member name.
 * \param File         File where this member is defined.
 * \param LineNo       Line number.
 * \param SizeInBits   Member size.
 * \param AlignInBits  Member alignment.
 * \param OffsetInBits Member offset.
 * \param Flags        Flags to encode member attribute, e.g. private
 * \param Ty           Parent type.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateMemberType(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNo:dword; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; OffsetInBits:Tuint64_t; Flags:TLLVMDIFlags; 
           Ty:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a
 * C++ static data member.
 * \param Builder      The DIBuilder.
 * \param Scope        Member scope.
 * \param Name         Member name.
 * \param NameLen      Length of member name.
 * \param File         File where this member is declared.
 * \param LineNumber   Line number.
 * \param Type         Type of the static member.
 * \param Flags        Flags to encode member attribute, e.g. private.
 * \param ConstantVal  Const initializer of the member.
 * \param AlignInBits  Member alignment.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateStaticMemberType(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNumber:dword; _Type:TLLVMMetadataRef; Flags:TLLVMDIFlags; ConstantVal:TLLVMValueRef; AlignInBits:Tuint32_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a pointer to member.
 * \param Builder      The DIBuilder.
 * \param PointeeType  Type pointed to by this pointer.
 * \param ClassType    Type for which this pointer points to members of.
 * \param SizeInBits   Size.
 * \param AlignInBits  Alignment.
 * \param Flags        Flags.
  }
function LLVMDIBuilderCreateMemberPointerType(Builder:TLLVMDIBuilderRef; PointeeType:TLLVMMetadataRef; ClassType:TLLVMMetadataRef; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; 
           Flags:TLLVMDIFlags):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for Objective-C instance variable.
 * \param Builder      The DIBuilder.
 * \param Name         Member name.
 * \param NameLen      The length of the C string passed to \c Name.
 * \param File         File where this member is defined.
 * \param LineNo       Line number.
 * \param SizeInBits   Member size.
 * \param AlignInBits  Member alignment.
 * \param OffsetInBits Member offset.
 * \param Flags        Flags to encode member attribute, e.g. private
 * \param Ty           Parent type.
 * \param PropertyNode Property associated with this ivar.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateObjCIVar(Builder:TLLVMDIBuilderRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; LineNo:dword; 
           SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; OffsetInBits:Tuint64_t; Flags:TLLVMDIFlags; Ty:TLLVMMetadataRef; 
           PropertyNode:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for Objective-C property.
 * \param Builder            The DIBuilder.
 * \param Name               Property name.
 * \param NameLen            The length of the C string passed to \c Name.
 * \param File               File where this property is defined.
 * \param LineNo             Line number.
 * \param GetterName         Name of the Objective C property getter selector.
 * \param GetterNameLen      The length of the C string passed to \c GetterName.
 * \param SetterName         Name of the Objective C property setter selector.
 * \param SetterNameLen      The length of the C string passed to \c SetterName.
 * \param PropertyAttributes Objective C property attributes.
 * \param Ty                 Type.
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateObjCProperty(Builder:TLLVMDIBuilderRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; LineNo:dword; 
           GetterName:Pchar; GetterNameLen:Tsize_t; SetterName:Pchar; SetterNameLen:Tsize_t; PropertyAttributes:dword; 
           Ty:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create a uniqued DIType* clone with FlagObjectPointer. If \c Implicit
 * is true, then also set FlagArtificial.
 * \param Builder   The DIBuilder.
 * \param Type      The underlying type to which this pointer points.
 * \param Implicit  Indicates whether this pointer was implicitly generated
 *                  (i.e., not spelled out in source).
  }
function LLVMDIBuilderCreateObjectPointerType(Builder:TLLVMDIBuilderRef; _Type:TLLVMMetadataRef; Implicit:TLLVMBool):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a qualified
 * type, e.g. 'const int'.
 * \param Builder     The DIBuilder.
 * \param Tag         Tag identifying type,
 *                    e.g. LLVMDWARFTypeQualifier_volatile_type
 * \param Type        Base Type.
  }
function LLVMDIBuilderCreateQualifiedType(Builder:TLLVMDIBuilderRef; Tag:dword; _Type:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a c++
 * style reference or rvalue reference type.
 * \param Builder   The DIBuilder.
 * \param Tag       Tag identifying type,
 * \param Type      Base Type.
  }
function LLVMDIBuilderCreateReferenceType(Builder:TLLVMDIBuilderRef; Tag:dword; _Type:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create C++11 nullptr type.
 * \param Builder   The DIBuilder.
  }
function LLVMDIBuilderCreateNullPtrType(Builder:TLLVMDIBuilderRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a typedef.
 * \param Builder    The DIBuilder.
 * \param Type       Original type.
 * \param Name       Typedef name.
 * \param File       File where this type is defined.
 * \param LineNo     Line number.
 * \param Scope      The surrounding context for the typedef.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateTypedef(Builder:TLLVMDIBuilderRef; _Type:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNo:dword; Scope:TLLVMMetadataRef; AlignInBits:Tuint32_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry to establish inheritance relationship
 * between two types.
 * \param Builder       The DIBuilder.
 * \param Ty            Original type.
 * \param BaseTy        Base type. Ty is inherits from base.
 * \param BaseOffset    Base offset.
 * \param VBPtrOffset  Virtual base pointer offset.
 * \param Flags         Flags to describe inheritance attribute, e.g. private
  }
function LLVMDIBuilderCreateInheritance(Builder:TLLVMDIBuilderRef; Ty:TLLVMMetadataRef; BaseTy:TLLVMMetadataRef; BaseOffset:Tuint64_t; VBPtrOffset:Tuint32_t; 
           Flags:TLLVMDIFlags):TLLVMMetadataRef;cdecl;external;
{*
 * Create a permanent forward-declared type.
 * \param Builder             The DIBuilder.
 * \param Tag                 A unique tag for this type.
 * \param Name                Type name.
 * \param NameLen             Length of type name.
 * \param Scope               Type scope.
 * \param File                File where this type is defined.
 * \param Line                Line number where this type is defined.
 * \param RuntimeLang         Indicates runtime version for languages like
 *                            Objective-C.
 * \param SizeInBits          Member size.
 * \param AlignInBits         Member alignment.
 * \param UniqueIdentifier    A unique identifier for the type.
 * \param UniqueIdentifierLen Length of the unique identifier.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateForwardDecl(Builder:TLLVMDIBuilderRef; Tag:dword; Name:Pchar; NameLen:Tsize_t; Scope:TLLVMMetadataRef; 
           File:TLLVMMetadataRef; Line:dword; RuntimeLang:dword; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; 
           UniqueIdentifier:Pchar; UniqueIdentifierLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create a temporary forward-declared type.
 * \param Builder             The DIBuilder.
 * \param Tag                 A unique tag for this type.
 * \param Name                Type name.
 * \param NameLen             Length of type name.
 * \param Scope               Type scope.
 * \param File                File where this type is defined.
 * \param Line                Line number where this type is defined.
 * \param RuntimeLang         Indicates runtime version for languages like
 *                            Objective-C.
 * \param SizeInBits          Member size.
 * \param AlignInBits         Member alignment.
 * \param Flags               Flags.
 * \param UniqueIdentifier    A unique identifier for the type.
 * \param UniqueIdentifierLen Length of the unique identifier.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateReplaceableCompositeType(Builder:TLLVMDIBuilderRef; Tag:dword; Name:Pchar; NameLen:Tsize_t; Scope:TLLVMMetadataRef; 
           File:TLLVMMetadataRef; Line:dword; RuntimeLang:dword; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; 
           Flags:TLLVMDIFlags; UniqueIdentifier:Pchar; UniqueIdentifierLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a bit field member.
 * \param Builder             The DIBuilder.
 * \param Scope               Member scope.
 * \param Name                Member name.
 * \param NameLen             Length of member name.
 * \param File                File where this member is defined.
 * \param LineNumber          Line number.
 * \param SizeInBits          Member size.
 * \param OffsetInBits        Member offset.
 * \param StorageOffsetInBits Member storage offset.
 * \param Flags               Flags to encode member attribute.
 * \param Type                Parent type.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateBitFieldMemberType(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNumber:dword; SizeInBits:Tuint64_t; OffsetInBits:Tuint64_t; StorageOffsetInBits:Tuint64_t; Flags:TLLVMDIFlags; 
           _Type:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a class.
 * \param Scope               Scope in which this class is defined.
 * \param Name                Class name.
 * \param NameLen             The length of the C string passed to \c Name.
 * \param File                File where this member is defined.
 * \param LineNumber          Line number.
 * \param SizeInBits          Member size.
 * \param AlignInBits         Member alignment.
 * \param OffsetInBits        Member offset.
 * \param Flags               Flags to encode member attribute, e.g. private.
 * \param DerivedFrom         Debug info of the base class of this type.
 * \param Elements            Class members.
 * \param NumElements         Number of class elements.
 * \param VTableHolder        Debug info of the base class that contains vtable
 *                            for this type. This is used in
 *                            DW_AT_containing_type. See DWARF documentation
 *                            for more info.
 * \param TemplateParamsNode  Template type parameters.
 * \param UniqueIdentifier    A unique identifier for the type.
 * \param UniqueIdentifierLen Length of the unique identifier.
  }
